# llm-fine-tuning-mtech

./: .gitignore  pyproject.toml  requirements.txt
chatgpt/: data_exploratory.ipynb  data_preparation.ipynb  training.ipynb  validations.ipynb
mistral-7b/: mistral_inference.ipynb  mistral_python.py  train-eval-split.ipynb
mistral-7b/lora/checkpoint-0101/: params.json
rag/: create_embeddings.ipynb
tinyBERT/: test.ipynb  tiny_bert.ipynb  tiny_bert_training.ipynb  training.ipynb  utils.py
