[tool.poetry]
name = "mtech-dissertation"
version = "0.1.0"
description = ""
authors = ["Shreyas B <reach.shreyasb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.2.2"
boto3 = "^1.34.132"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
tiktoken = "^0.7.0"
openai = "^1.37.1"
transformers = "^4.44.0"
datasets = "^2.20.0"
peft = "^0.12.0"
torch = "^2.4.0"
evaluate = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
